--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "def": "ts-node src/generate-typings"
   },
   "dependencies": {
     "@nestjs/common": "^7.3.1",
     "@nestjs/core": "^7.3.1",
     "@nestjs/graphql": "^7.5.1",
     "@nestjs/platform-express": "^7.3.1",
+    "@types/dotenv": "^8.2.0",
     "apollo-server-express": "^2.15.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.2.0",
     "graphql-tools": "^6.0.12",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +39,7 @@
     "@nestjs/cli": "^7.4.1",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.3.1",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.6",
     "@types/jest": "26.0.3",
     "@types/node": "^14.0.14",
