--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:test": "nest start --watch NODE_ENV=test",
+    "start:pro": "nest start --watch NODE_ENV=production",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,12 +24,12 @@
     "def": "ts-node src/generate-typings"
   },
   "dependencies": {
-    "@nestjs/common": "^7.3.1",
-    "@nestjs/core": "^7.3.1",
-    "@nestjs/graphql": "^7.5.1",
-    "@nestjs/platform-express": "^7.3.1",
-    "@nestjs/platform-ws": "^7.3.1",
-    "@nestjs/websockets": "^7.3.1",
+    "@nestjs/common": "^7.3.2",
+    "@nestjs/core": "^7.3.2",
+    "@nestjs/graphql": "^7.5.5",
+    "@nestjs/platform-express": "^7.3.2",
+    "@nestjs/platform-ws": "^7.3.2",
+    "@nestjs/websockets": "^7.3.2",
     "apollo-server-express": "^2.15.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.2.0",
