--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set Up Node
         uses: actions/setup-node@v2-beta
         with:
-          node-version: '12'
+          node-version: 14
       - run: npm install
       - run: npm build
       - run: npm run start:prod
