--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ '12', '14' ]
     steps:
       - uses: actions/checkout@v2
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: Set Up Node
+      - name: Set Up Node ${{ matrix.node }}
         uses: actions/setup-node@v2-beta
         with:
-          node-version: 14
+          node-version: ${{ matrix.node }}
       - run: npm install
-      - run: npm build
+      - run: npm run build
       - run: npm run start:prod
