--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,6 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run start:prod
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v3
+#           publish_dir: ./dist
